# blur

./: .blur-config.cfg  .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Installer.bat  README.md  blender.vpy  blur.rc  blur.sln  blur.vcxproj  blur.vcxproj.filters  build.bat  installer.bat  installer.ps1  main.py  premake5.lua  setup.bat  smoothie.py  vcpkg-configuration.json  vcpkg.json  weighting.py
.github/workflows/: build.yaml  msbuild.yml
blur/: avisynth_handler.cpp  avisynth_handler.h  blur.cpp  blur.h  blur.rc  blur.vcxproj  blur.vcxproj.filters  config.cpp  config.h  console.cpp  console.h  ffmpeg.cpp  ffmpeg.h  gui.cpp  helpers.cpp  helpers.h  includes.h  main.cpp  pch.h  preview.cpp  preview.h  rendering.cpp  rendering.h  script_handler.cpp  script_handler.h
blur/drawing/: drawing.h
blur/drawing/datatypes/: s_colour.h
blur/drawing/font/: font.cpp  font.h
cmake/: c_flag_overrides.cmake  cxx_flag_overrides.cmake
install/: post.ps1  pre.ps1
installer/: .gitignore  environment.iss  readme.md  setup.iss
installer/dependencies/lib/: blur  blur.py
lib/imgui/: imconfig.h  imgui.h  imgui_draw.cpp  imgui_impl_glfw.cpp
plugins/: adjust.py  blending.py  deduplicate.py  filldrops.py  havsfunc.py  interpolate.py  mvsfunc.py  weighting.py
resources/: blur.icns  resource.h  resource.rc  resources_win32.rc
scripts/: config.py  encoder.py  encoder_settings.py  render.py  vs_script.py
settings/: recipe.ini  recipe.yaml
src/: Info.plist  blur.py
src/cli/: blur-cli.vcxproj  blur-cli.vcxproj.filters  cli.cpp  cli.h  cli_pch.cpp  cli_pch.h  main.cpp  pch.h
src/common/: blur.cpp  blur.h  common_pch.h  config.cpp  config.h  helpers.cpp  helpers.h  pch.h  preview.cpp  preview.h  rendering.cpp  rendering.h  rendering_frame.cpp  rendering_frame.h  script_handler.cpp  utils.cpp  utils.h
src/gui/: blur-gui.vcxproj  blur-gui.vcxproj.filters  config.h  console.cpp  console.h  drag_handler.cpp  drag_handler.h  easing.h  event_handler.cpp  event_handler.h  gui.cpp  gui.h  gui_helpers.cpp  gui_helpers.h  gui_pch.cpp  gui_pch.h  main.cpp  pch.h  renderer.cpp  renderer.h  tasks.cpp  tasks.h  window_manager.cpp  window_manager.h
src/gui/drawing/: drawing.cpp
src/gui/drawing/datatypes/: datatypes.h  s_colour.cpp  s_point.cpp  s_point.h  s_rect.h  s_size.h
src/gui/drawing/font/: font.cpp  font.h
src/gui/resources/: font.h
src/gui/resources/fonts/: eb_garamond.h
src/gui/ui/: keys.cpp  keys.h  render.cpp  render.h  ui.cpp  ui.h  utils.cpp  utils.h
src/gui/ui/elements/: bar.cpp  button.cpp  checkbox.cpp  dropdown.cpp  image.cpp  notification.cpp  separator.cpp  slider.cpp  text.cpp  text_input.cpp
src/vapoursynth/: blur.py
src/vapoursynth/blur/: adjust.py  blending.py  deduplicate.py  interpolate.py  weighting.py
triplets/: x64-linux-libcxx.cmake
